June 7th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Moved database connection code to create_db_connections function.
  Function is now called AFTER changing users when running in 
  daemon mode to prevent 'MySQL gone away' errors on some systems.

May 24th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added 'Total traps ignored' to stats.

May 14th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added error number output for MySQL.

May 13th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add support for /usr/local/etc/snmp and /usr/local/etc.
- Added help text for user when a Perl module is not found when loading
  via 'require'.
- Bug fix: debug log started time printed as serial instead of
  regular date/time.

April 4th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add db_unknown_trap_format variable, update docs, faq
- Statistics dumped at shutdown: 
  Total traps received
  Total traps translated
  Total unknown traps
- Statistics can be dumped every x seconds via statistics_interval 
  variable or by creating a !statistics file in the spool directory.

April 3rd, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add support for logging unknown traps to SQL table.
  Added xxx_table_unknown variable for each SQL type.

January 25th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Clean up yesterday's symbolic fix.  It now translates all
  variable NAMES (if needed), the trap OID and the enterprise
  VALUE.

January 24th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Traps received using symbolic format (snmptrapd without -On) 
  were not being handled correctly.  Code in readtrap was looking
  at wrong variable name.  Moved to function 
  translate_symbolic_to_oid.  Called for trap OID variable value,
  agent_address,  community and agent addrss variable names

December 5th, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_0.9.1