@@ -165,6 +165,30 @@ remove_backslash_from_quotes = 0
 # received.  Defaults to 0
 dynamic_nodes = 0
 
+# This enables the UCD-SNMP / NET-SNMP Perl module save_descriptions variable 
+# used for retaining the description text inside of MIB files.  It also
+# determines how the $D variable substitution will be handled.  Setting to 0
+# will disable save_descriptions and cause $D to output nothing.
+# Set to 0 to disable $D.
+# Set to 1 to enable $D.
+# Set to 2 to enable $D and to remove any white space at the start of each line
+# of the description.
+# Note:  Enabling this option can greatly increase the amount of memory used by
+#        SNMPTT.  Only enable it if you need to use the $D variable.
+# Note:  net_snmp_perl_enable *must* be enabled
+mib_descriptions_enable = 0
+
+# Set to 0 to disable common escape sequences in FORMAT and EXEC lines
+# Set to 1 to enable common escape sequences in FORMAT and EXEC lines
+# The following sequences are supported:
+#   \a		alarm (bell)          (BEL)
+#   \f		form feed             (FF)
+#   \n		newline               (LF, NL)
+#   \r		return                (CR)
+#   \t		tab                   (HT, TAB)
+#
+escape_sequences_enable = 0
+
 [DaemonMode]
 # Set to 1 to have snmptt fork to the background when run in daemon mode
 # Ignored by Windows.  See documentation
